--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -1,4 +1,5 @@
 {% extends 'catalog/base.html' %}
+{% load my_tags %}
 {% block title %}
 {{ title }}
 {% endblock %}
@@ -10,8 +11,7 @@
 </div>
 <div class="container">
     <div class="row text-center">
-        {% for product in products %}
-        <div class="col-3">
+        <div class="col-8">
             <div class="card mb-4 box-shadow">
                 <div class="card-header">
                     <h4 class="my-0 font-weight-normal">{{product.name}}</h4>
@@ -19,20 +19,21 @@
                 <div class="card-body">
                     <h1 class="card-title pricing-card-title">{{product.price}}</h1>
                     <ul class="list-unstyled mt-3 mb-4 text-start m-3">
-                        <li>{{product.description|slice:100}}</li>
+                        <li>{{product.description}}</li>
 
                     </ul>
-                    <a href="/product/{{product.pk}}">
-                        <button type="button" class="btn btn-lg btn-block btn-outline-primary">Подробнее</button>
-                    </a>
+                    <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
                 </div>
 
             </div>
 
         </div>
-        {% endfor %}
+        <div class="col-4">
+            <img src="{{ product.image|mediafile_filter }}" />
+        </div>
     </div>
 
 
 </div>
+
 {% endblock %}
