--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -12,6 +12,8 @@
     <nav class="ms-5">
         <a class="p-2 btn btn-outline-primary" href="/">Каталог</a>
         <a class="p-2 btn btn-outline-primary" href="/contacts/">Контакты</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:create_product' %}">Добавить продукт</a>
+
     </nav>
 </div>
 {% block content %}{% endblock %}
