--- a/catalog/templates/catalog/homepage.html
+++ b/catalog/templates/catalog/homepage.html
@@ -20,6 +20,12 @@
                     <h1 class="card-title pricing-card-title">{{product.price}}</h1>
                     <ul class="list-unstyled mt-3 mb-4 text-start m-3">
                         <li>{{product.description|slice:100}}</li>
+                        {% if product.active_version %}
+                        <li> Версия товара {{product.active_version}}</li>
+                        {% else %}
+                        <li> Нет активной версии</li>
+                        {% endif %}
+
 
                     </ul>
                     <a href="/product/{{product.pk}}">
