--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -13,6 +13,33 @@
         <a class="p-2 btn btn-outline-primary" href="/">Каталог</a>
         <a class="p-2 btn btn-outline-primary" href="/contacts/">Контакты</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:create_product' %}">Добавить продукт</a>
+<div class="btn-group">
+            <button type="button" class="btn btn-outline-primary dropdown-toggle btn-lg" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                {% if user.is_authenticated %}
+                    {{ user.email }}
+                {% else %}
+                    Войти
+                {% endif %}
+            </button>
+            {% if user.is_authenticated %}
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/users/profile">Профиль</a></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="/users/logout">Выйти</a></li>
+                </ul>
+            {% else %}
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/users">Войти</a></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="/users/register">Регистрация</a></li>
+                </ul>
+            {% endif %}
+        </div>
 
     </nav>
 </div>
